# pybooru

./: .flake8  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.markdown  README.md  README.rst  appveyor.yml  changelog.md  clean_pycs.sh  environment.yml  gulpfile.js  package-lock.json  package.json  provisional_test.py  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish_to_pypi.yml
Pybooru.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Makefile  make.bat
docs/source/: api_danbooru.rst  api_moebooru.rst  conf.py  danbooru.rst  index.rst  moebooru.rst  pybooru.rst  quick_start_guide.rst
examples/: list_tags.py  login_example  login_example.py  more_examples.py  posts_img_url.py  wiki_msg.py
examples/danbooru/: download_example.py  list_tags.py  login_example.py  post_img_path.py  wiki_msg.py
examples/moebooru/: list_tags.py  login_example.py  more_examples.py  posts_img_url.py  wiki_msg.py
pybooru/: Pybooru.py  __init__.py  api.py  api_danbooru.py  api_e621.py  api_gelbooru.py  api_moebooru.py  danbooru.py  e621.py  exceptions.py  gelbooru.py  moebooru.py  moebooru_api.py  pro.py  pybooru.py  resources.py
pybooru/tests/: helpers.py  test_api_clients.py  test_config.py  testing.py
tools/: preview_documentation.bat  remove_binary.bat  remove_binary.sh
