[metadata]
name = Pybooru
version = 5.0.0.dev1
description = A package to access to Danbooru/Moebooru APIs
url = https://github.com/LuqueDaniel/pybooru
license = MIT License
author = Daniel Luque
author_email = danielluque14@gmai.com
project_urls =
    Documentation = https://pybooru.readthedocs.io/en/latest/
    Source = https://github.com/LuqueDaniel/pybooru
    Issues = https://github.com/LuqueDaniel/pybooru/issues
    Changelog = https://github.com/LuqueDaniel/pybooru/blob/master/changelog.md
keywords = Pybooru, moebooru, danbooru, API, client
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Site Management
platforms = any
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE

[options]
packages = pybooru
install_requires =
    requests >= 2.26
python_requires = >= 3.6
include_package_data = True

[options.extras_require]
docs =
    Sphinx
    sphinx-rtd-theme
all =
    %(docs)s
